--- a/shared/thinking/data/science/データ.md
+++ b/shared/thinking/data/science/データ.md
@@ -22,3 +22,7 @@
 指標はデータを端的に表したもので、データそのものではない。
 
 データは過去しか見れないが、過去から未来を推測することはできる。
+
+データでさえも正しいとは言えない。
+データはイデアを写し取るために、抜けがある。実物と写真みたいな関係。感覚器によってはモノクロだったり、画角が狭かったりする。カメラでいうレンズやセンサー、フィルムによって決まる。
+数値データでも、どんなパラメータを観測するかでデータは変わってしまう。データを形作るためのパラメータは人間が恣意的に決めたものでしかない。
