--- a/shared/influence/people/説得.md
+++ b/shared/influence/people/説得.md
@@ -121,3 +121,7 @@ Assertion も参照。
 「地道に、こつこつ、一歩ずつ。…新しいものを認めさせるのに近道はないよ。自分の主張を通すにはまず相手をこちらへ招待するところからだ。奇抜なだけの人間として一瞬で消費されてしまわないためにもね。」『ブレス』
 
 理によって人を動かすのは難しい。
+
+相手が何に注目しているか分かれば、それに合わせて相手にハマる話ができる。
+
+相手を知るのが、人を動かす第一歩。
