--- a/shared/intimacy/contact/アイコンタクト.md
+++ b/shared/intimacy/contact/アイコンタクト.md
@@ -31,3 +31,6 @@
 
 人から目を逸らす人は相手を理性のないサルだと思ってる。アイコンタクトすると絡まれると思ってる。
 ニホンザルなんかは目を合わせたり意味深にポケットを探ったりすると襲われるので気をつけよう。
+
+アイコンタクトはジェスチャーや笑顔とセット。
+アイコンタクトが成立したことをわかりやすく伝える。
