--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -214,3 +214,19 @@ https://www.total-marriage.com/column/1644/
 相手に好かれていなくても、自分から近づくことはできる。嫌われていなければ近づきすぎて威嚇されるくらいで済む。
 
 相手を害さないためには、相手がされたくないことを知らないといけない。相手にとって何が害になるか。
+
+近づきにくい人に対して「しない」行動が、親しくなるための行動。
+
+- ニックネームで呼ぶ
+- タメ口で話す
+- スキンシップ
+- なんでもないことで連絡する
+- 目を合わせる
+- 手を振る
+- 歩み寄る
+- 走り寄る
+- 言動を真似する
+- 相手の好きなものを好きになる
+
+遠慮しない。
+親しくなるとそもそも一般的には失礼になる。礼儀がいらなくなる。
