--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -147,3 +147,6 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 『スパロボY』
 
 「生命ある限り、敗北はない」（スパロボY）
+
+生きることもエネルギーが関わっている。workの考え方は欠かせない。
+自分という器を機能させるためにエネルギーを集める。
