--- a/shared/thinking/data/science/データ.md
+++ b/shared/thinking/data/science/データ.md
@@ -26,3 +26,12 @@
 データでさえも正しいとは言えない。
 データはイデアを写し取るために、抜けがある。実物と写真みたいな関係。感覚器によってはモノクロだったり、画角が狭かったりする。カメラでいうレンズやセンサー、フィルムによって決まる。
 数値データでも、どんなパラメータを観測するかでデータは変わってしまう。データを形作るためのパラメータは人間が恣意的に決めたものでしかない。
+
+dataとideaがあって、dataはideaではないし、ideaはdataではない。
+
+感覚にはブレがあるし、精度によっては正確に写し取れない。
+認知も、写し取ったデータを見落としたり、誤解したり、変な意味づけをしたりする。
+
+感覚器を使ってそこにあるideaを写し取ったものがdata。
+
+同じデータを見ても、どこに注目して、どこに見落とすとか、見えているはずなのに見ないふりをしたり、裏の意味を読み取ったりするのは個人差がある。
