--- a/shared/trust/reliability/予測可能性.md
+++ b/shared/trust/reliability/予測可能性.md
@@ -1,6 +1,6 @@
 信頼は一種の予測可能性。
 
-一貫性は予測可能性でしかない。
+一貫性は予測可能性の一部でしかない。
 
 信頼の構成要素だけど、全てではないと思う。
 
@@ -12,3 +12,5 @@
 
 「想定通りに比べたら想定外なんてありふれた話さ」
 『ウマ娘 シンデレラグレイ』
+
+人の場合、精神が不安定だと予測可能性が下がって、信頼しにくい。
