--- a/shared/communication/media/language/言葉にする.md
+++ b/shared/communication/media/language/言葉にする.md
@@ -49,3 +49,10 @@ https://youtu.be/8FHo4BKf8hk?si=H7tmy8LWTURy3Ger
 伝えたい言葉が見つからないならそれを言葉にする。「言葉にできない」を言葉にする。
 
 言葉にできるのと、それを相手が理解できるのと、相手を動かすのは別。
+
+実況と解説が基本。
+どうなっていて、それはどうしてか。
+
+過去よりも、現在目の前にあるものを見ながら語る方が簡単。
+まずは現在のことを語れないと、過去のことは語れない。
+例えばアニメを語りたいなら、アニメを見ながら語る練習をする。
