--- a/shared/intimacy/自己紹介.md
+++ b/shared/intimacy/自己紹介.md
@@ -47,3 +47,5 @@ https://studio250.jp/menu/profile/
 周りの人の層に合わせると尚いい。カラオケだったら音楽の話題とか。
 
 自己紹介では、「この人ともっと話してみたい」と思わせる、次の関係性への布石が必要。
+
+自己紹介は人に話すのが前提なので、話題で分ける。
