--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -812,3 +812,7 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 贈り物をしたり、誰かを喜ばせたりする感覚がビジネスの基礎になる。
 
 社会に受け入れられる、価値を認められるためにビジネスで社会貢献する面もある。
+
+売れるレベルがどこくらいか。
+
+自分では品質が足りないと思っても、売ってみるしかないのかも。
