--- a/shared/science/科学.md
+++ b/shared/science/科学.md
@@ -72,3 +72,6 @@ mental 心理的
 
 1000人中900人に有益な科学的手法であっても、残りの100人は取り落としてしまう。
 残りの100人を例外としてさらに詳細な法則を見つけていくことで、950人、990人、999人、と、拾い上げる数を増やしていく努力を止めるべきではない。
+
+どうなるか。
+どうしてそうなるか。
