--- a/shared/care/responsibility/tips/自由.md
+++ b/shared/care/responsibility/tips/自由.md
@@ -102,3 +102,11 @@
 人の自然な性に逆らってこそ自由。
 
 自由が良いわけでもない。単に自然とは別の選択肢があるというだけ。
+
+ごっこ遊びこそが真に理性的で人間的な行為でもある。
+自然に恋愛して動物的本能に従ってセックスして子どもを産んで、って流れは自然で、自由ではない。
+
+自由は単に自然の対義語というだけで、必ずしも良いものとは限らない。
+
+自然というのは、人の手が介入しなければそうなる、という状態。
+逆にいうと、自由とは何らかの介入を行うことだ。アート。
