--- a/shared/cooking/tips/トマト缶を使う.md
+++ b/shared/cooking/tips/トマト缶を使う.md
@@ -10,3 +10,5 @@
 
 トマトペーストのチューブ1つでだいたいトマトジュース200ml分くらい。
 1つ50円しないくらいなので、トマト缶より安いし使い勝手もいい。トマトの身が欲しい時だけトマト缶にする。カレーとかミネストローネとかはトマトペーストで十分。
+
+トマトサルサはタコスやタコライスのほか、単純に肉のソースとしても悪くない。ステーキとか。鶏でも牛でも。パスタにも使える。
