--- a/shared/hobby/こだわり.md
+++ b/shared/hobby/こだわり.md
@@ -1,1 +1,3 @@
 趣味やこだわりは単なる好き嫌いを超えて、判断の傾向になっている。こだわりがその人の個性を左右する。例えば格ゲーで高いコンボにこだわりがある人は他の人がもっと安定コンボを使う場面でも高いコンボを狙って成功させる。
+
+こだわりは理由があるわけではないので、他人が口出ししても意味がない。ただ、他人に迷惑をかけているなら当然敵対される場合もある。
