--- a/shared/information/gathering/情報を集める.md
+++ b/shared/information/gathering/情報を集める.md
@@ -17,3 +17,6 @@
 情報を得るということは、不要な可能性を捨てることだ。
 
 情報が足りなくても決断すべきときと、情報が揃うまで待つべきときがある。急いでないなら基本的に情報が揃うのを待っていい。
+
+情報を集める際に重要なのは、「浅い」人間を除外することだ。浅い人間から得られる情報はそもそも精査する時間すらもったいない。
+次に、重要な情報は自分で検証すること。信頼できる人間であっても、誤解していたり、その分野には詳しくなかったりする。
