--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -21,3 +21,7 @@
 相手のことがわからなくても、相手が素晴らしい人だろうと期待する。
 
 自分がどんな人を好きなのか、傾向を知っておくことで、自ずと話題も選べる。
+
+人を好きになるというよりは、好きになれる人を増やす、というべきか。
+
+好きな人は多いほうがいい。その中で連絡に割けるリソースも限界があるので、一部に絞ることはある。でも好きになっておいて損はない。人嫌いは損。
