--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -114,3 +114,13 @@ loveもworkも利害関係は別で、careにあるのかも。
 目を離さない。
 
 情があるなら、自分が嫌われてもやらないといけないことがある。嫌いだけど体に良いものを食べさせるとか、体に悪いものをやめさせるとか。とはいえ、相手の感情も考えて味が分かりにくいようにするのも情。
+
+情で重要なのは相手を失わないことなので、死んで失うのも、嫌われて失うのも避けたい。
+
+情の本質は、相手を失わないことか、面倒を見ることか。
+
+面倒を見るというのは、手間をかけるということ。観察して、支援して、維持する。責任を持つこと。
+
+面倒を見る、手間をかける、注意して見る、観察する、良い状態にする、維持する、悪い状態にしない、遠慮しない、めんどくさがらない、優先順位をつける。
+
+時間や手間は有限なので、何かを大事にするということは、それ以外を見捨てることでもある。捨てるものが少ないと、それだけ一つ一つの大事なものにかけられる手間は少なくなってしまう。
