--- a/shared/work/力の使い分け.md
+++ b/shared/work/力の使い分け.md
@@ -1,1 +1,5 @@
 強制力が働きにくいものは、影響力で間接的に動かす。
+
+間接的な手段は制御するのが難しい。直接的な手段よりもリスクが高い。結果が予測しにくい。でもそれだけ大きな変化につながることがある。人間が制御できる範囲を超える場合がある。強制力と影響力のどちらかしかないということは少ない。様々な力が働く。特に力が大きくなるほど様々な力が混ざる。
+
+間接的な手段で動かしにくいものもある。自分から動かないものは影響されにくいもの。植物や無機物。
