--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -357,3 +357,5 @@ workは意味の文脈、loveは価値の文脈。
 
 「壊れていないものは直すな」（エンジニアリングの格言）
 手を加えると壊れる可能性がある。わざわざ壊れていないものを壊す必要はない。
+
+働かせる、エネルギーを取り出す、力を溜める、効率よく力を使う、パフォーマンス、パフォーマンスの低下、パフォーマンスの回復、動かす、止める。
