--- a/shared/achievement/障害.md
+++ b/shared/achievement/障害.md
@@ -9,3 +9,6 @@
 どのような障害があるのか、計画段階で想定しておかないと達成できなくなる。
 
 法律や倫理（特に警察権力）は目的達成のための障害。クリアしないと邪魔される。
+
+困難なことでも時間をかけるとわりとなんでもできる。
+ここに期間の制限が加わると困難になる。そもそも能力が高いと、他の人と同じ期間の制限があってもなんとかなるので、困難だった、とは記憶に残りにくい。
