--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -816,3 +816,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 売れるレベルがどこくらいか。
 
 自分では品質が足りないと思っても、売ってみるしかないのかも。
+
+ビジネスの基本は「自分でやる」ことと、「売れるレベルまで品質を高める」こと。後者が難しい。
