--- a/shared/entertainment/examples/racing/horse/馬券を買う.md
+++ b/shared/entertainment/examples/racing/horse/馬券を買う.md
@@ -30,3 +30,7 @@ UMACAやスマッピー専用機ならわりと空いてる。
 みたいな買い方がある。組み合わせる手もある。
 
 競馬では馬券が三連複までしかないので、4頭以上の組み合わせについてはボックス、フォーメーション、流しのような馬券を組み合わせる方法で買う。ただ、余計な馬券を多く買い込むことにもなるので、基本的には避けた方がいい。
+
+競馬初心者はとりあえず複勝狙いでいいけど、できれば単勝を当てるのが目標。
+
+どこまで行ってもまずは複勝、単勝を当てるのが競馬の基本。複勝、単勝が当たらないのにそれ以上難しい当て方はできない。まずは一頭を選んで、単勝か複勝の馬券を一枚だけ買う。
