--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -25,3 +25,5 @@
 人を好きになるというよりは、好きになれる人を増やす、というべきか。
 
 好きな人は多いほうがいい。その中で連絡に割けるリソースも限界があるので、一部に絞ることはある。でも好きになっておいて損はない。人嫌いは損。
+
+人を好きになるために、その人のエピソードを思い出してみたり、知らないエピソードを想像してみたり。
