--- a/shared/communication/channels/talk/話.md
+++ b/shared/communication/channels/talk/話.md
@@ -62,3 +62,7 @@ conversation になっていく。まず talk が成立してから、conversati
 
 talkとconversationは区別する。
 talkができなくてもconversationはできる。talkがつまらなくても楽しいconversationはできる。
+
+語れば語るほど感情も知識も豊かになっていく。グラデーションが細かくなって、名前がつくことで区別されていく。
+
+何かを語るには、ながら作業しない方がいい。
