--- a/shared/physics/sound/音高.md
+++ b/shared/physics/sound/音高.md
@@ -31,3 +31,5 @@ https://saxinfo.net/tokyosaxportal-top-page/%E3%82%B5%E3%83%83%E3%82%AF%E3%82%B9
 
 一般的なドレミファソラシドはC4からB4まで。
 英字表記の場合も数字はCから始まる。G3, A3, B3, C4, D4, ..., B4, C5, ...の形。
+
+音の高さは倍音に含まれて耳に聞こえる最低音で決まる。人の耳で聞き取れる音には上限があるので、音が高くなるほど聞こえる音は澄んでいく。
