--- a/shared/popular/advocacy/推し.md
+++ b/shared/popular/advocacy/推し.md
@@ -1,5 +1,7 @@
 # 推し
 
+布教。
+
 推しは増やすもの。
 生きる気力の源泉は多いほど良い。
 
@@ -46,3 +48,5 @@ Youtube の切り抜きとか、アフィリエイトブログなんかもそう
 「推しは推せる（余裕のある）ときに（無理のない範囲で）推せ」
 
 偶像崇拝ならアイドルより神を推した方がいい。生身の人間に永遠を求めるな。
+
+好きなものを布教することで、人気にする。
