--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -43,3 +43,10 @@ SNSなどで間接的に情報を得て影響を受けることもある。
 驚かせる、楽しませる、喜ばせる、好かれる、なども影響力。
 
 道で二人が正面から歩いてきた時に「ただ待つ」のも相手を動かす。
+
+人が動くのは、自分のため。
+自分のために動いてくれる人のために動くのも、間接的に自分のため。
+
+他人が自分を助けてくれると思わない人は、他人のためにも動かない。
+
+他人が自分に何をしてくれるか。
