--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -512,3 +512,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 美しいものは信頼しやすい。
 
 信頼、頼りになる、というのは、機能の話だと思ってる。思った通りの働きができること。
+
+人を頼る、人に頼られることも考える。
