--- a/shared/communication/他人と関わる.md
+++ b/shared/communication/他人と関わる.md
@@ -1,6 +1,11 @@
 ## 人と関わるメリット
 
-- 自分の推しを人気にする
+- 自分の推しを布教する
+- 恋人になって子どもを作る
+- 恋人や友人を紹介してもらう
+- 一人でできないことをする
+  - 一人でできない大きな仕事をする
+  - 一人でできない遊びをする
 
 ## その他
 
