--- a/shared/care/tips/自分を知ってもらう.md
+++ b/shared/care/tips/自分を知ってもらう.md
@@ -33,3 +33,13 @@
 
 自分を知ってもらうためには、自分を知らないといけない。
 あとは自分が好きなものについても言葉にできるといい。
+
+そもそもなぜ自分を知ってもらうか。
+助けてもらうため、困った時に声をかけてもらうため、相手から近づいてもらうため、認められるため、とか。
+
+信頼される、尊重される、承認される。
+
+全ての情報を開示する時間はない。
+情報を絞らないといけない。
+
+共通点を見つけたら、「私も好き」とか、積極的に自己開示する。
