--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -365,3 +365,7 @@ https://x.com/ggnka_icha/status/1810274912759918858
 敬意や尊重は社交の一部かも。
 
 尊敬は、相手の都合を考えることで、やるかどうかでしかない。ただ、尊重されやすい人というのはいて、価値が高い人。配慮すべき人。弱者もある意味尊重される場合がある。老人とか。
+
+最低限の承認と近い。
+
+最低でも害さないこと。
