--- a/shared/war/敵.md
+++ b/shared/war/敵.md
@@ -47,3 +47,8 @@ Lose-Winの関係をLose-Loseに引きずり込む。
 恨みを抱えたまま生きていく必要があるのは、その人を警戒しないといけないから。その人が死んだりして警戒する必要がなくなれば破棄してもいい。
 
 周りを威嚇して怖がらせるような態度をわざと取っている人は、周りを敵だと思っていて、その上でビビっている。ビビってるから威嚇する。
+
+敵を殺してエネルギーの損失を防ぐ。
+
+害があるもの。
+リソースやエネルギーの損失を引き起こす要因。
