--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -47,3 +47,6 @@
 戦争でもできるだけお互いの死傷者を減らす。恨みを買わないに越したことはない。ただ、生き残るために殺すこともある。
 
 殺すのではなく、倒す、生かして制圧するためには、自分が殺されないようにしないといけない。自分が殺されるようなら相手を生かす余裕はない。
+
+敵がいると余計なエネルギーが必要になる。
+周りに害のある生物がいたら、まず殺さないと、コスパが悪い。味方になるなら味方にしてもいい。
