--- a/shared/intimacy/自分を知ってもらう.md
+++ b/shared/intimacy/自分を知ってもらう.md
@@ -43,3 +43,13 @@
 情報を絞らないといけない。
 
 共通点を見つけたら、「私も好き」とか、積極的に自己開示する。
+
+何を知ってもらうべきか。
+
+特に開示すべきなのは、好意。
+「あなたと親しくなりたい」ということを伝えて、認められること。
+
+認められるか自信がないと、知らせたくないと感じる。
+認められた経験が少ないと隠しがちになる。
+
+自己開示しないと、他人に認められる自信がないイメージになる。
