--- a/shared/intimacy/親近感.md
+++ b/shared/intimacy/親近感.md
@@ -1,5 +1,7 @@
 # Intimacy
 
+親近感、相性。
+
 正直、遠方の親友よりも近所の知人のほうが便利。
 
 親近感は気軽さ。近づきやすさ。近づきがたい空気があると声をかけづらいとか、親しくなるにはマイナスがある。
@@ -17,3 +19,5 @@
 
 親近感がないのは、近づきにくい印象。
 相手から親しくなるための行動を取りにくい。
+
+同族嫌悪もなくはない。
