--- a/shared/management/マネジメントの優先順位.md
+++ b/shared/management/マネジメントの優先順位.md
@@ -27,3 +27,5 @@ Business, Finance, Community, など。
 
 長期的に飛び続けたいなら、Navigate の段階まで必要。
 目的地を目指さずにふらふら飛ぶだけではいつか燃料が切れて落ちる。補給が必要。
+
+マネージャーはまず「やる気のある人」を守らないといけない。「やる気のない人」のために「やる気のある人」がごく僅かでも影響を受けてはいけない。
