--- a/shared/music/tips/リズム感を鍛える.md
+++ b/shared/music/tips/リズム感を鍛える.md
@@ -67,6 +67,8 @@ https://youtube.com/watch?v=Da_WMtoMj2U&si=ExrLt6EGFuDcnue2
 2拍と3拍のポリリズムはタンタタタンになる。
 左手3、右手2で台とか叩くなら、両⚪︎左右左⚪︎で一周。
 
+2拍を線、3拍を三角で両手で図形を描くのもいい。
+
 ポリリズムや変拍子をとるときはまず、1との対比を何度も繰り返して覚える。
 ヨルシカのアポリアなんかは7/8と8/8の変拍子だけど、まずは1:8のリズムと1:7のリズムが取れないといけない。1は常に一定。
 
