--- a/shared/people/人との関係.md
+++ b/shared/people/人との関係.md
@@ -48,6 +48,7 @@
     - 話したこと
     - 出かけたところ
 - 共通の知り合い
+- 相手が誰かをどう思っているか
 
 ## メモ
 
@@ -82,3 +83,5 @@
 用がある
 帰属
 仲間
+
+付き合う際に気をつけること。こだわりや欠点でもあるかも。
