--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -180,3 +180,8 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 口や手を出すタイミングが気遣いでは重要。まずリズムを合わせる。
 
 相手を優先するのはいいけど、自分を後回しにしすぎて自分を損なうのはやりすぎ。
+
+気遣いはとにかく形が大事で、習慣にするべき。むしろ心を見せると人によって違ってしまう。
+
+義務感による気遣いと、自然と滲み出る気遣いがある。
+ただ、社交などの気遣いでも、義務感を感じさせないほど体に染みついた気遣いにするべきではある。
