--- a/shared/lifestyle/shopping/買い物.md
+++ b/shared/lifestyle/shopping/買い物.md
@@ -5,3 +5,6 @@
 業スーの焼きおにぎりが安すぎる。キロ571円くらい。
 アイリスオーヤマの小盛りごはんがキロ878円くらい。
 ただ、米は炊くと倍になるので、キロ1200円の白米を炊くとキロ600円くらい。まぁ、炊く手間はかかるけど。
+
+水は通販だと2Lで100円、店舗だと安いところで2Lで75円くらい。
+浄水器の場合はカートリッジの寿命が製品によって違う。あと蛇口に取り付けるなら飲料以外の水も使うので、10-30%くらいで考える。
