--- a/shared/management/マネジメントの優先順位.md
+++ b/shared/management/マネジメントの優先順位.md
@@ -29,3 +29,4 @@ Business, Finance, Community, など。
 目的地を目指さずにふらふら飛ぶだけではいつか燃料が切れて落ちる。補給が必要。
 
 マネージャーはまず「やる気のある人」を守らないといけない。「やる気のない人」のために「やる気のある人」がごく僅かでも影響を受けてはいけない。
+マネジメントというよりこの辺は統治か？
