--- a/shared/pain/同情.md
+++ b/shared/pain/同情.md
@@ -7,3 +7,6 @@ empathy や sympathy は共感と訳されることもあるけど、empathy は
 同情は共感というよりもCareの心。世話しよう、大事にしようと思うこと。
 
 「同情するのは無料だ。」『水属性の魔法使い』
+
+かわいそうに見られたくないなら、かわいそうに振る舞うべきではない。
+かわいそうに振る舞っているなら、本心ではかわいそうに見られたいということだ。それならかわいそうに見られることを素直に喜べばいい。
