--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -32,6 +32,16 @@
 - 誘われる / 誘われない
 - 抱ける、抱けない（生理的に無理）
 - 包容力がある
+- 瞬発力がある
+- 引き出しが多い、何にでも詳しい
+- 勇ましい
+
+## 一時的なもの
+
+- いつもより元気、元気がない
+- 体調が良い、悪い
+- 声が枯れている
+- 緊張している
 
 ## より具体的に
 
