--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -124,3 +124,5 @@ loveもworkも利害関係は別で、careにあるのかも。
 面倒を見る、手間をかける、注意して見る、観察する、良い状態にする、維持する、悪い状態にしない、遠慮しない、めんどくさがらない、優先順位をつける。
 
 時間や手間は有限なので、何かを大事にするということは、それ以外を見捨てることでもある。捨てるものが少ないと、それだけ一つ一つの大事なものにかけられる手間は少なくなってしまう。
+
+情というのは本当に大事なものを守ることであって、それ以外のどうでもいいものにまで情を振り撒いて最も大事なものを失ったのでは本末転倒だ。
