--- a/shared/family/marriage/離婚.md
+++ b/shared/family/marriage/離婚.md
@@ -3,3 +3,5 @@ https://rikonbengoshi-link.com/column/basic/00048/
 
 2019 年に離婚した夫婦の中では、約 20% が 20 年以上経ってからの熟年離婚となっている。
 https://ricon-pro.com/columns/81/
+
+男性が妻に親権を渡すと養育費が重いので、実子誘拐して親権を渡さないようにするのが正しい。
