--- a/shared/human/being/well/経済的余裕.md
+++ b/shared/human/being/well/経済的余裕.md
@@ -6,3 +6,5 @@
 貯蓄があっても余裕はできない。むしろ貯蓄を使うなら節約しないといけない。
 
 親が裕福でも、その人が動かせるお金がどうかはわからない。
+
+余裕がないととりあえず直近ですぐ手に入る小銭を拾うしかない。まず生活費。余裕があればギャンブルできる。ハイリスクハイリターンを狙える。
