--- a/shared/popular/人を集めるとどうなるか.md
+++ b/shared/popular/人を集めるとどうなるか.md
@@ -1,3 +1,4 @@
+- 目立つ
 - さらに人が集まる
   - 味方が増える
   - 敵が増える
@@ -17,3 +18,7 @@
 
 人を集めても、うまく動かせないと集まっただけになる。
 でも、集めること自体に意味がある場合もある。集まった人は勝手に交流したりすることがある。
+
+基本的に人を集めるということは目立つということ。
+
+好かれたいのではなく、嫌われたくないのであれば、目立たない方がいい。
