--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -185,3 +185,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 
 義務感による気遣いと、自然と滲み出る気遣いがある。
 ただ、社交などの気遣いでも、義務感を感じさせないほど体に染みついた気遣いにするべきではある。
+
+子どもに向ける注意はある種の警戒というか、心配。何かやらかしそうだから目が離せない。
