--- a/shared/observation/観察.md
+++ b/shared/observation/観察.md
@@ -2,6 +2,13 @@
 
 現実の事象を客観的に捉えること。
 
+1. 目を向ける
+2. 目を離さない
+3. 現在の状態を分析する
+4. 変化を捉える
+5. 変化の要因となった刺激を推測する
+6. 刺激を加えて反応を見る
+
 自分の信条や感情、主観は置いておく。対象を評価しない。客観的なデータだけを集める。
 特徴を捉える、分析するのは客観的にもできる。客観的に分析する。
 
@@ -242,3 +249,10 @@ inspection は明確な目的というか基準がある。
 
 観察の対象は、特に反応。
 どのような刺激にどう反応するか。
+
+観察はその対象だけじゃなくて、変化や反応の原因になった刺激にも目を向ける。
+
+観察の基本はまず目を向けること。目を離さないこと。同じところから見たり、違うところから見たりすること。
+
+何かを知るには、観察が必要。
+動的な変化を見るか、静的な状態を見るか。
