--- a/shared/popular/人に好かれる.md
+++ b/shared/popular/人に好かれる.md
@@ -18,3 +18,7 @@
 
 女性は好意を悪意として受け取ることがあるので注意。
 基本的には好意を示すべきだけど、警戒されないようにする。
+
+人に好かれるのは必須要件ではないけど、人が集まりやすくなる。
+
+人との接触にはコストがかかるので、そもそもなんらかの利がある人じゃないと付き合わない。
