--- a/shared/popular/人を集める.md
+++ b/shared/popular/人を集める.md
@@ -24,5 +24,13 @@
 - 怖い
 - 不安定
 - 害がある
+- 性格が悪い（テイカー）
+- 嘘が多い
 
 などの要因で人が離れやすくなる。
+
+商売やビジネスをしていくなら、人気のことは切り離せない。人が集まらないと大きなことはできない。
+
+性格が良くても感情が不安定だったり嘘が多かったりすると人は離れていく。
+
+社交やコミュニケーションの負荷が高いと人が離れていきやすい。
