--- a/shared/observation/何を見るか.md
+++ b/shared/observation/何を見るか.md
@@ -2,21 +2,22 @@
   - 現在
   - 過去
   - 一時的か、永続的か（短期的か、長期的か）
-- 反応 (受動的): 刺激を与えるとどうなるか
-  - 刺激
-    - 快
-    - 不快
-  - どういう刺激に強く反応するか
-  - どういう状態に遷移するか
-  - 元の状態に戻るか
-- 意志 (能動的): 刺激を与えなくても動いているか
-  - 目的
-  - 結果
-    - 成功
-      - 実績
-    - 失敗
+- 変化 (動的)
+  - 反応 (受動的): 刺激を与えるとどう変化するか
+    - どういう刺激に強く反応するか
+    - どういう状態に遷移するか
+    - 元の状態に戻るか
+  - 意志 (能動的): 刺激を与えなくても動いているか
+    - 目的
+    - 結果
+      - 成功
+        - 実績
+      - 失敗
+- 刺激: どんな刺激に反応したか
 
 状態というよりも影響や変化を観察する。動的な部分を見るのが大事。
 ただ、変化を捉えるためにはその前の状態もよく見ておかなければならない。
 
 一時的な状態とそうでない状態は、時間が経つと元の状態に戻るかどうか。
+
+観察はその対象だけじゃなくて、変化や反応の原因になった刺激にも目を向ける。
