--- a/shared/devotion/情熱.md
+++ b/shared/devotion/情熱.md
@@ -41,3 +41,8 @@ Passive と同じ語源。
 「じゃんけんだって命懸けなら必死になるでしょ。」『龍と苺』
 
 何が自分のモチベーションになるか、理解する。
+
+よくあるモチベーションとしては、勝利、性欲、支配、怒り、上達、など。
+
+表現者か、競技者か。
+自らの芸術、美学を極めようとするか、他人に勝ろうとするか。
