--- a/shared/finance/相続.md
+++ b/shared/finance/相続.md
@@ -1,3 +1,9 @@
 日本では相続税がかかる。
 
 親子間などで事業や財産などを引き継ぐこと。
+
+一夫多妻制で遺産を相続した子が実母以外の母を娶るのは夫を亡くした女性を養う意味がある。
+
+相続には主に長子相続と末子相続がある。
+末子相続は上から順に生前相続して独立していって、末子が親を看取って残りの全てを相続する形式。一番若い子が相続するので一代が長続きしやすいし、上の子も十分に育ってから独立するので、全体のバランスがいい。それに教育の面でも長子より末子のほうが試行錯誤の結果として良い教育になりやすい。逆に、教育の期間は比較的短くなる。家族の継続性を重視した相続。末子が十分大きくなる前に親が急死すると例外処理が必要。
+長子相続（家督相続）は基本的に全ての財産を長子が相続する。資源が集中して強い家が維持される一方、相続争いが苛烈になって家族の不和が生じやすいし、長子以外は放逐されたりする。
