--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -336,3 +336,5 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 芸術的・文化的に貧しい国は、他の国にとっても価値がない。戦争したりしても別に民衆ごと殲滅したっていい。
 
 artの本質は自由、人が介入すること。その技。
+
+最初は相手の反応を見て楽しませていても、最後は我を通さないと個性が出ない。我を通しながら、勘所を見極める。両方やる。
