--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -187,3 +187,6 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 ただ、社交などの気遣いでも、義務感を感じさせないほど体に染みついた気遣いにするべきではある。
 
 子どもに向ける注意はある種の警戒というか、心配。何かやらかしそうだから目が離せない。
+
+相手に合わせて臨機応変に処理する。
+相手を見て、例えば体調が悪かったら重い食べ物よりお粥にするとか。
