--- a/shared/human/being/well/孤独.md
+++ b/shared/human/being/well/孤独.md
@@ -13,3 +13,8 @@
 人は孤独だ。周りに誰がいても。孤独を抜け出せたように思えても錯覚でしかない。
 
 「本当に好きなことをしている時、他人は必要ない。」（『水属性の魔法使い』）
+
+「一人で旅するものが最も早い」（アングロ・アメリカンのことわざ）
+
+動き出しは一人が最も早い。
+ただ、動き出しが早くても動きが速いとは限らない。遠くに行きたいなら、早さより速さが大事。
