--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -38,10 +38,14 @@
 
 ## 一時的なもの
 
-- いつもより元気、元気がない
-- 体調が良い、悪い
-- 声が枯れている
-- 緊張している
+- 機嫌
+  - はしゃいでいる
+  - 落ち込んでいる、元気がない
+  - 緊張している
+- 体調
+  - 肌にツヤがある
+  - 疲れている
+  - 声が枯れている
 
 ## より具体的に
 
