--- a/shared/commerce/marketing/マーケティング.md
+++ b/shared/commerce/marketing/マーケティング.md
@@ -147,3 +147,5 @@ https://drive.google.com/file/d/1YaG9xpu-WQKBPUi8yQ4HaDYQLUSa7Y3J/view
 「自ずから売れる」ようにするのがマーケティング。
 
 「自ずから売れる」のがマーケティングだけど、通常はその初期段階として広告などで販売ルートを作るのも含める。
+
+マーケティングの過程として、「人を集める」過程がある。popularが関連する。でもあくまでも手段。
