--- a/shared/engagement/praise/褒める.md
+++ b/shared/engagement/praise/褒める.md
@@ -108,3 +108,11 @@ engagementのためではなく、respectのために褒めるべき。
 
 褒める行為は皮肉になることもある。
 ただ、内面がどうであっても褒め言葉は素直に受け取ってしまえばいい。
+
+喜ぶのと褒めるのは同じ。
+相手の行動を強化する。
+
+happy.
+pleasure.
+
+人を動かす文脈に置いてもいいかも。
