--- a/shared/engagement/エンゲージメント.md
+++ b/shared/engagement/エンゲージメント.md
@@ -335,3 +335,5 @@ engagementはcommunicationや trustと関わりが深い。
 エンゲージメントとか、参加させる、という概念は、リソースを割かせる、責任を負わせる、ということ。
 
 エンゲージメントとは、責任の範囲を自分の外に広げること。
+
+エンゲージメントは特に帰属や所属に関わるところ。誇りとか、愛着。
