--- a/shared/execution/prompt/指示.md
+++ b/shared/execution/prompt/指示.md
@@ -73,3 +73,6 @@ https://www.nikkei.com/article/DGXZQOUD198KF0Z11C24A2000000/?n_cid=SNSTW005
 
 相手によって指示を使い分ける。
 経験が少ない相手ほど細かく指示しないといけない。
+
+人間に指示する場合でも、一つの実行環境として考える。
+人によって違うのがコンピュータよりも面倒。でもコンピュータよりは雑な命令でも伝わる。
