--- a/shared/health/予防.md
+++ b/shared/health/予防.md
@@ -14,3 +14,5 @@
 冬に出かける時はマスクする。感染病の予防もあるけど、喉や鼻の保湿が大きい。
 
 特定の病気を予防したことで総合的な免疫力が落ちることはない。
+
+インフルはコロナでみんなマスクしてたら完封されていたので、そこまで予防接種する必要はないと思ってるんだけどどうなんだろ。むしろコロナ何とかしてくれ。
