--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -5,12 +5,13 @@
 ## Good
 
 - 名前を呼ぶ
-- テンションを合わせる
+- ノリ、テンションを合わせる
 - 大げさにリアクションする
-- 相手の言動を覚えておく
 - 話の続きを促す
   - 詳しく質問する
+- 相手を観察して、思ったことを伝える
 - 変化に気づく
+  - 相手の言動を覚えておく
   - 前に会った時と変わったところを指摘する
 
 ## Bad
@@ -57,3 +58,5 @@
 
 理解を示す。
 よく知らないものに関心があるとは言えない。
+
+時計を見ていたら「何か予定あるの？」とか、上着を着たら「寒い？エアコン下げようか？」とか、相手のちょっとした変化に気づいて声をかけると関心を示せる。
