--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -150,3 +150,5 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 
 生きることもエネルギーが関わっている。workの考え方は欠かせない。
 自分という器を機能させるためにエネルギーを集める。
+
+「人間は刺激を得るために生きている」と言った人もいるみたい。出典は忘れた。
