--- a/shared/mood/making/場を盛り下げる.md
+++ b/shared/mood/making/場を盛り下げる.md
@@ -28,3 +28,5 @@
 一つの話題にとどまりすぎると、その話題がわからない人はつまらなくなってくる。
 
 場を盛り下げる人は切り捨てないといけない。そういう人に嫌われても別にいい。
+
+盛り上げるのと、良くするのは違うと思っている。ムードとノリ。ノリが良くてもムードが悪くなることはある。
