--- a/shared/people/人を知る.md
+++ b/shared/people/人を知る.md
@@ -172,3 +172,10 @@
 モノマネすることを想定して観察する。
 
 会話して、相手の考え、思考を知るだけでは足りない。感情も、熱意も、知識も、経験も、全てを知ろうとする。
+
+- 相手の言いたいこと
+- 相手の言われたいこと
+
+- 価値観
+  - 何に喜ぶか
+  - 何に怒るか
