--- a/shared/mood/機嫌.md
+++ b/shared/mood/機嫌.md
@@ -13,3 +13,7 @@
 人前で機嫌が悪いのを見せるって社会に出た男性だと恥だと思われがちなのもあるかも。
 
 moodは一人でも適用するかどうか。根本的には機嫌のことだけど、態度に出さなければmoodが悪いとは言えない。
+
+はしゃいでいると気分は良くても注意が散漫になって態度が雑になることもある。はしゃぎすぎない。
+
+機嫌が悪いとパフォーマンスが落ちる。
