--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -60,3 +60,6 @@
 よく知らないものに関心があるとは言えない。
 
 時計を見ていたら「何か予定あるの？」とか、上着を着たら「寒い？エアコン下げようか？」とか、相手のちょっとした変化に気づいて声をかけると関心を示せる。
+
+関心を示すことに恐れを抱く人もいる。
+目立ちたくないとか、男嫌い、女嫌いとか。
