--- a/shared/collaboration/organization/組織のパフォーマンス.md
+++ b/shared/collaboration/organization/組織のパフォーマンス.md
@@ -12,3 +12,7 @@
 組織というものは、能力密度を高めないと動かせない。軍隊と同じ。農民を入れると進行が遅くなる。組織の進行を遅らせるには、地雷を踏ませればいいのだ。
 
 叱ってもパフォーマンスは上がらない。狙った方向に導いてやるのが大事。価値観や方向性の共有が必要。あとは報酬とかエンゲージメント。
+
+組織によっては、個人のパフォーマンスが他の社員の何倍もある場合があり、周りのパフォーマンスが落ちるよりその社員のパフォーマンスを落とさないことが重要。
+ただ、組織としては長期的に見て悪影響しかないので、うまいこと隔離したほうがいい。一人で動けるようにして、できるだけ間接的に関わらせる。
+特にクリエイティブではその人の代わりが効かないので、それ以外の方法がない。何倍とかじゃなくて、その人以外はゼロ。
