--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -10,6 +10,9 @@
 
 - 自分の態度を改める
 - 他人の気遣いに気づいて、感謝を伝える
+- 何度でも先に名乗る (相手が名前を忘れていても気まずくならないように)
+- 体調を気遣う
+- 誘いを断りやすくする
 
 ## その他
 
@@ -20,3 +23,12 @@
 
 相手が興味を持っていることに興味を持つ。
 ただ幅広く教養を持つというよりは、身近な人と同じ教養を持つ。
+
+気まずい感じ、気後れした感じにならないようにする。
+
+ムードを良くするということは、相手の態度を良くするということ。機嫌や気分と言ってもいい。
+
+気遣いや配慮はcareよりもmoodか。
+相手の機嫌、気分を上げる。最低でも落とさない。
+
+消毒をあえて人前でするとか、目の前で調理するとか、裏でもできることをあえて見せることも気遣いに繋がる。信頼を得やすくなる。
