--- a/shared/mood/態度.md
+++ b/shared/mood/態度.md
@@ -1,5 +1,7 @@
 機嫌が悪い = 態度が悪い
 
+空気を良くするのが良い態度。
+
 相手が話しかけたいと思うような態度、話題、属性。
 
 美人とか、そもそも女性は気を遣って話しかけてもらいやすい。
@@ -10,6 +12,8 @@
 どういう態度が良いのか、あるいは悪いのか。
 
 態度がチグハグだと不安になる。
+
+品性も態度かも。
 
 ## 良い態度
 
