--- a/shared/commerce/sales/セールス.md
+++ b/shared/commerce/sales/セールス.md
@@ -49,3 +49,5 @@
 訪問営業する場合でもまず信頼関係を築きながら相手の欲しいものを探る。いきなり売り込まない。御用聞が基礎。
 
 利害関係のある人が直接売り込むより、誰か、できれば相手の身近な人を挟んで間接的に説得した方がうまくいきやすい。
+
+契約が取れなかった相手に逃げられる狩猟型のセールスと、契約が取れなかった相手でも親交を続けて別の仕事を紹介してもらえるような農耕型のセールス。
