--- a/shared/information/gathering/情報を集める.md
+++ b/shared/information/gathering/情報を集める.md
@@ -20,3 +20,11 @@
 
 情報を集める際に重要なのは、「浅い」人間を除外することだ。浅い人間から得られる情報はそもそも精査する時間すらもったいない。
 次に、重要な情報は自分で検証すること。信頼できる人間であっても、誤解していたり、その分野には詳しくなかったりする。
+
+人を集めると、情報も集まりやすい。
+
+- 直接的
+  - 観察
+  - 新聞やテレビなどの情報媒体
+- 間接的
+  - 人を集める
