--- a/shared/lifestyle/clothing/服を選ぶ.md
+++ b/shared/lifestyle/clothing/服を選ぶ.md
@@ -15,3 +15,11 @@
 冬はとにかく白黒の服に灰色や茶色の上着を合わせるのが手軽かな？
 
 服はまず生地だと思ってる。
+
+さまざまな視点がある。
+
+- イベントに合った服
+- ライフスタイルに合った服
+
+自転車に乗ったり山に登ったりするなら、動きやすいのがまず最優先。
+特に自転車だとゆるいロングスカートなんかはチェーンに巻き込まれたりすると危ない。
