--- a/shared/memory/記憶に残る.md
+++ b/shared/memory/記憶に残る.md
@@ -1,3 +1,10 @@
+特に記憶に残るのは以下の二つの方法。
+
+- 繰り返し
+- インパクト（感情が大きく動く）
+
+インパクトは難しいけど、繰り返しは誰でもできる。まずは繰り返しから。
+
 感情が働かないと記憶も働きづらい。
 
 記憶に残すための基本は繰り返し。話を聞いた時も「なるほど」じゃなくて、頭の中あるいは口頭で繰り返す。
