--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -32,3 +32,15 @@
 相手の機嫌、気分を上げる。最低でも落とさない。
 
 消毒をあえて人前でするとか、目の前で調理するとか、裏でもできることをあえて見せることも気遣いに繋がる。信頼を得やすくなる。
+
+気遣いはシンプルに。
+
+相手の態度を良くするには、自分も真似される人間であるべき。
+
+自分だけでなく、他の人の分も備える。
+
+気遣いが失敗しても、他の方法を試せばいい。
+手札が少ないと、例外に対処できない。
+
+気遣いは、愛や情ではない。
+単純に、ムードが悪いと不快だから自分でなんとかするだけ。掃除みたいなもの。
