--- a/shared/mood/態度.md
+++ b/shared/mood/態度.md
@@ -4,6 +4,17 @@
 
 相手が話しかけたいと思うような態度、話題、属性。
 
+## 良い態度
+
+- 体を相手の方に向けて話を聞く
+
+## 悪い態度
+
+- キョロキョロして落ち着かない
+- 携帯を触ったりして話を聞いていない
+
+## その他
+
 美人とか、そもそも女性は気を遣って話しかけてもらいやすい。
 
 相手が嫌がっていても話を続けるべきかどうか。
@@ -15,11 +26,4 @@
 
 品性も態度かも。
 
-## 良い態度
-
-- 体を相手の方に向けて話を聞く
-
-## 悪い態度
-
-- キョロキョロして落ち着かない
-- 携帯を触ったりして話を聞いていない
+そもそもどういう態度が良いものかわかってないと、気分が良くても態度が良くならない。むしろその振る舞いが良いと思ってうまくいかないこともある。教育が必要。「こうしてほしい」と具体的に伝えて反復させる。
