--- a/shared/mood/making/場の空気を良くする.md
+++ b/shared/mood/making/場の空気を良くする.md
@@ -1,5 +1,13 @@
-空気をよくするには、
+空気を良くするには、相手の機嫌や態度を良くしないといけない。
 
+まずは自分の態度を良くする。
+
+具体的に空気をよくするには、
+
+- 良い態度を自ら示す
+- 良い態度に誘導する
+  - 褒め言葉を自然にリクエストする
+- 相手の良い態度に気づいて、指摘する
 - 目を合わせて、笑いかける
 - 自分から声をかける
 - 会話を続ける
@@ -15,3 +23,6 @@
 態度が悪い人は最悪排除する。
 
 会話が止まると気まずい感じになるのは、緊張が伝わっているのかも。
+
+気遣いは、態度の悪い人にこそ必要。
+人によって態度を変えないで、ムードは自分で作る。
