--- a/shared/devotion/情熱.md
+++ b/shared/devotion/情熱.md
@@ -44,5 +44,12 @@ Passive と同じ語源。
 
 よくあるモチベーションとしては、勝利、性欲、支配、怒り、上達、など。
 
+- 競技者: 勝利
+- 表現者: 反応
+  - コメディアン: 笑い
+- 技術者: 上達
+- 商売人: 儲け
+- など
+
 表現者か、競技者か。
 自らの芸術、美学を極めようとするか、他人に勝ろうとするか。
