--- a/games/五目並べ.md
+++ b/games/五目並べ.md
@@ -53,3 +53,7 @@ _o_
 
 五目並べの攻めは3個で2,2を作り続けるのが基本。相手は基本的に2手以内で受け続けないといけない。
 その中で良い形になったら4個で3,2を作ったりして相手の守りを崩す。
+
+守りでは、まず相手の打ちたいところを洗い出して、危険度で優先順位をつける。最も優先順位が高いところに打てばいい。どこにも急いで打たなくていいなら攻めの手を打つ。
+
+攻めるか受けるかは、速度と相談。自分の方が早く勝てるなら自分の手を優先して攻めていい。そうでないならできるだけ攻めにも繋がる手で受ける。
