--- a/shared/business/corporation/tips/離職率を下げる.md
+++ b/shared/business/corporation/tips/離職率を下げる.md
@@ -1,2 +1,13 @@
 離職率の低下に特化した会社の政策。
 https://togetter.com/li/1950427
+
+離職する理由の大半は上司。
+
+- 上司と合わない
+- QoLが低い
+- 周りに敬意を持てない
+- 組織を信用できない
+- 専門職:
+  - 技術力が低い
+  - 技術に思い入れがない
+  - 学びづらい
