--- a/shared/collaboration/organization/hierarchy/命令.md
+++ b/shared/collaboration/organization/hierarchy/命令.md
@@ -9,3 +9,12 @@
 実行前の進言は聞いて、実行中の叛意は許さないのがコツ。
 実行中に逆に走るのは邪魔にしかならない。
 規律を乱したらどうなるか、見せしめを作らないといけない。
+
+ただ命令するより、選択肢を用意して選ばせた方が自分の意思で動いた感覚になる。
+
+フォロー:
+
+なにが邪魔になっているか。
+どこまで終わっているか。
+
+「あなたが必要だ」というメッセージを忘れない。
