--- a/shared/breath/training/tips/呼吸筋を鍛える.md
+++ b/shared/breath/training/tips/呼吸筋を鍛える.md
@@ -1,8 +1,15 @@
-- 腹式呼吸で息を吸って、横隔膜を下げたままキープする
-- 胸式呼吸で息を吐いて、息を止めたまま腹筋を持ち上げてキープする
-- 胸式呼吸で息を吸って、胸郭を広げたままキープする
-- 腹式呼吸で息を吸って、横隔膜を下げたまま腹筋を上げ下げして息を吸ったり吐いたりする
-- 腹式呼吸で息を吸って、横隔膜を下げたまま腹筋をゆっくり上げて細く長く強く息を吐く。
+- 横隔膜:
+  - 手で細い輪を作って口に当て、2秒間の腹式呼吸でできるだけ多く息を吸う
+  - 持久力:
+    - 腹式呼吸で大きく息を吸って、横隔膜を下げたままキープする
+- 肋間筋:
+  - 胸式呼吸で息をできるだけ吐き切る
+  - 胸式呼吸で息をできるだけたくさん吸う
+- 腹筋:
+  - 胸式呼吸で息を吐いて、息を止めたまま腹筋を持ち上げて5秒キープする
+- 横隔膜と腹筋:
+  - 腹式呼吸で大きく息を吸って、横隔膜を下げたまま腹筋を上げ下げして息を吸ったり吐いたりする
+  - 腹式呼吸で大きく息を吸って、横隔膜を下げたまま腹筋をゆっくり上げて細く長く強く息を吐く
 
 主な呼吸筋としては、肋間筋、横隔膜、腹筋がある。
 そのほか、首や背中の筋肉も動いている。
@@ -10,3 +17,5 @@
 呼吸に負荷をかける場合、横隔膜を下げる、腹筋を上げる、横隔膜を下げたまま腹筋を上げ下げする、あたりがいい。
 
 呼吸筋はすぐ衰えるので、日頃から作業中なんかにも呼吸の訓練をするのが大事。
+
+スーパーブリーズとかなくても、ビニール手袋をつけた手で輪を作って口に当てれば簡単に負荷を調整できる。
