--- a/shared/family/children/妊娠.md
+++ b/shared/family/children/妊娠.md
@@ -11,3 +11,6 @@
 十月十日は10ヶ月目の10日のことなので、280日を指す。310日ではない。
 
 子供の性別には母親によって偏りがある場合もある。
+
+古くて多い精子よりも、新しくて少ない精子の方が妊娠率は高い。
+https://nazology.kusuguru.co.jp/archives/190046
