--- a/shared/voice/tuning/声のウォームアップ.md
+++ b/shared/voice/tuning/声のウォームアップ.md
@@ -106,3 +106,5 @@ https://youtu.be/c2Kftj5KKF4?si=vPMiab_Cw0-Vjqzc
 
 声というより喉かも。
 呼吸器系のウォームアップは別でまとめてもいいかも。
+
+個人的には、歌う前の最低限のウォームアップは呼吸一本にした。大きく胸式呼吸と腹式呼吸、sの圧かけとか。ただ、全身のストレッチは呼吸にも役立つのでやっといて損はない。
