--- a/shared/music/theory/作曲家の学習方法.md
+++ b/shared/music/theory/作曲家の学習方法.md
@@ -17,3 +17,9 @@
 短い曲を作る
 
 他人の曲を真似する
+
+## メモ
+
+作曲はまず既存曲のコピーやアレンジから。自分ならどうするか、を考える。ボカロに歌わせるのもいいかも。
+慣れてきたらサビを作る、フルコーラスを作る、と小さなものから大きなものを順に作る。
+後は試行錯誤の繰り返し。
