--- a/shared/voice/training/tips/低い声を出す.md
+++ b/shared/voice/training/tips/低い声を出す.md
@@ -52,3 +52,6 @@
 低い声を出すには、息を漏らしてはいけない。息を漏らすと声は高くなる。
 
 声帯の大きさは変わらないけど、声道の長さは喉の位置で変わる。
+
+低い声は喉を下げるのが基本だけど、基準の位置まで下げた後は喉を下げるほど声帯が伸びて声が高くなる。
+だから、喉を下げるというよりは、喉を上げない。
