--- a/shared/cooking/recipes/noodle/麺料理.md
+++ b/shared/cooking/recipes/noodle/麺料理.md
@@ -1,2 +1,5 @@
 イタリアの人がナポリタン許せないってたまに聞くけど、そもそもトマトに砂糖を合わせる、もっというとケチャップがイタリアでは一般的ではないみたい。アメリカのイメージだとか。
 https://youtu.be/TzBc-7L5vBE?si=-A9yVHMHfxQTJlMP
+
+そうめんは椎茸だしや昆布だしなど薄めの出汁でもいい。
+うどんやそばは鰹だしに醤油でしっかり味がついてるほうがいい。
