--- a/shared/business/transaction/価値を回収する.md
+++ b/shared/business/transaction/価値を回収する.md
@@ -51,3 +51,5 @@ https://xtech.nikkei.com/atcl/nxt/column/18/00001/09682/
 死んだり病気や怪我をしたりするなら、どんな報酬があっても受けるべきではない。金は生活の糧でしかないし、生活とは健康を維持することだ。
 
 素直に対価を求めるだけじゃなくて、とにかくばら撒いておいて1%でも恩返しされるのを期待する方法もある。
+
+ビジネスでは、人を集めるにしても金を出してくれる人を集めないといけない。
