--- a/shared/entertainment/examples/ギャンブル.md
+++ b/shared/entertainment/examples/ギャンブル.md
@@ -30,3 +30,5 @@
 
 ギャンブルで確実に勝つ方法は、胴元になること。
 お金を集めて、ほんの少しだけ手数料を抜いて、あとは勝った人で山分けしてもらう。
+
+ギャンブルに使えるお金はキャッシュフローで決まる。十分な収入の余裕があればそこまでは使ってもいい。生活費や資産には手をつけない。
