--- a/shared/execution/prompt/基本的な手順.md
+++ b/shared/execution/prompt/基本的な手順.md
@@ -4,3 +4,10 @@
 2. 入力を考える
 3. 相手が知っていることは入力から省略する
 4. 入力の渡し方を考える (Prompt Engineering)
+
+## コツ
+
+用件をしっかり伝える
+必要な情報を段階的に与えて、混乱させない
+例示する
+出力形式を明記する
