--- a/shared/decision/自信.md
+++ b/shared/decision/自信.md
@@ -1,6 +1,6 @@
-# 自信
+# Confidence
 
-自信とは、迷わずに行動できること。
+自信とは、迷わずに行動できること。確信。
 
 自信とは、自分を信じるというよりも、将来に希望を持つことだ。
 
@@ -52,3 +52,5 @@
 経験が自信になる。
 
 確信できなければ自信とは言えない。
+
+自信が得られなかったら学習性無力感になる。だから、結果が得られない状況で何も考えずに動き始めるのもよくない。
