--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -338,3 +338,7 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 artの本質は自由、人が介入すること。その技。
 
 最初は相手の反応を見て楽しませていても、最後は我を通さないと個性が出ない。我を通しながら、勘所を見極める。両方やる。
+
+他の人の働きを見て、「自分ならこうする」から始める。
+「自分ならこうする」が多い分野は興味がある分野かも。
+でも断片的な「自分ならこうする」があっても、作品として体系的に組み上げないと形にならない。
