--- a/shared/commerce/商業.md
+++ b/shared/commerce/商業.md
@@ -104,3 +104,5 @@ https://x.com/BuzzLogicCEO/status/1813015524546342978
 
 商売でも用より愛。
 推しグッズを何個も買い集めるのは用では説明できない。機能は基本的に一個あれば満たせる。
+
+商売をポイントアタックゲームとして楽しむこともできる。貯蓄か、売上がポイント。貯蓄を指標とするよりは、キャッシュフローを指標とした方が維持しやすい。貯蓄はデブ。
