--- a/shared/finance/財務.md
+++ b/shared/finance/財務.md
@@ -70,3 +70,5 @@ business だけでなく、community でも finance は必要。
 余裕がなくなるとファイナンスばかり見て本来の活動がおそろかになりがち。
 
 何らかの活動を続けていく上で、financeが関係ない分野はない。
+
+ファイナンスはあらゆる活動に必要だけど、あくまでも付随的なものでしかない。活動を維持するための基盤。
