--- a/shared/finance/貯蓄.md
+++ b/shared/finance/貯蓄.md
@@ -59,3 +59,5 @@
 貯金で生活している時はあまり高い買い物はしない。
 
 貯蓄があると一時的には収入がなくても生活できるけど、死ぬまで続けるにはかなり溜め込まないといけない。
+
+貯蓄は脂肪で、どれだけ貯蓄があっても体が大きいとは言えない。体の大きさは収支、キャッシュフローが決める。体の大きさに対して貯蓄が多いのはただのデブ。
