--- a/shared/production/quality/assurance/品質.md
+++ b/shared/production/quality/assurance/品質.md
@@ -47,3 +47,8 @@
 
 顧客が品質に厳しいのは当たり前。
 品質に対する正当な訴えまでクレームだなんだと文句を言っていたらいけない。
+
+品質を上げるには、まず売ろうとするべき。
+市場に出してみないと必要な品質はわからない。
+表に出さずに裏で遊んでいるだけでは、製品としての品質を高める感覚が掴めない。
+製品レベルの品質にする練習が必要。
