--- a/shared/communication/frameworks/emotion/感動.md
+++ b/shared/communication/frameworks/emotion/感動.md
@@ -37,3 +37,5 @@ https://dentsu-ho.com/articles/5523
 例外処理で感動を呼ぶには、普段はしっかり原則を守っていないといけない。
 
 機体が高くなるほど、感動させるのが難しくなる。
+
+感動させるには、卓越しなければならない。他人に理解できないレベルまで人類を超越する。圧倒的に優れる。
