--- a/shared/feeling/感覚.md
+++ b/shared/feeling/感覚.md
@@ -69,3 +69,8 @@ scent 嗅覚
 
 - 美味しい
 - 臭い
+
+感じるのと考えるのは違う。
+考えるのは、考えを改めること。感じるだけなら、なにも改めなくていい。基本的には同じ刺激に対して同じ感覚が繰り返されつつ、弱まっていく。
+
+老いると感覚は鈍くなっていく。最後はどんな刺激にも反応しなくなる。
