--- a/shared/story/telling/シナリオ.md
+++ b/shared/story/telling/シナリオ.md
@@ -2,6 +2,16 @@
 
 プロットを詳細にしたもの。
 
+- 誰が
+- いつ
+- どうした
+  - 行動
+  - 会話
+- どう思った
+- どう感じた
+
+の繰り返し。
+
 物語の詳細や会話、キャラクターの心理描写、などの具体的な内容を記述する。
 
 シナリオを作る前にプロットをしっかり作っているのが前提。
