--- a/shared/story/telling/ストーリーを語る.md
+++ b/shared/story/telling/ストーリーを語る.md
@@ -1,2 +1,6 @@
 誰かにストーリーを伝える場合は、内容を取捨選択しないといけない。
 必要な部分だけを、時系列で語る。
+
+小説、漫画、演劇、映画、などはストーリーを語る形式でしかない。
+ストーリー自体は共通。
+ただ、ストーリーによって形式が合う合わないはある。やっぱアクションは視覚的なメディアがいいし、ミステリーだったらあえて情報が少ないメディアの特性を活かしてミスリードや叙述トリックなども使える。
