--- a/shared/choice/value/価値観.md
+++ b/shared/choice/value/価値観.md
@@ -19,3 +19,5 @@
 他者からの評価が低かった場合に自分の評価基準も引き上げるべきかどうか。
 
 評価基準は複数の階層を持って、ここまで行かないと売れないけど、ここまでいけば個人的には満足、というように区別するべきではある。
+
+人と関わる場合はお互いの価値観がずれていると長期的な関係を維持するのが難しい。
