--- a/shared/people/人との関係.md
+++ b/shared/people/人との関係.md
@@ -4,14 +4,42 @@
   - 顔
   - 身なり
 - 相手を一言で表すと？
-- 家庭での立場
-- 職場での立場
-  - 上司？同僚？
-  - 先輩？後輩？
+- 役割
+  - 知人
+  - 友人
+  - 恋人
+  - 家族
+    - 親子
+    - 兄弟
+  - 上下関係
+    - 上司
+    - 部下
+  - 同僚
+    - 先輩
+    - 後輩
+- 共通点
+  - 価値観や方向性
+    - 何を選ぶか
+    - 何に喜ぶか
+    - 何に怒るか
+  - 興味や関心
+  - 考え方
+- 相違点
+- 利害関係
+  - 情緒的
+  - 実利的
+    - 学術的
+    - 技術的
+    - 経済的
+- 接触する頻度
+- 接触する時間の長さ
 - 相手をどう思っているか
-  - 共通点
+  - 好感
   - 距離感
-  - 安心感
+  - 信頼感
+    - 安心感
+    - 心理的安全性
+  - 尊敬
   - 性格
     - 良い/悪い
   - 趣味やこだわり
@@ -49,6 +77,12 @@
     - 出かけたところ
 - 共通の知り合い
 - 相手が誰かをどう思っているか
+- コミュニケーションの質
+  - 自分の考えや弱みをどれだけ開示できているか
+  - 相手の話を否定せずに聞けているか
+  - 感謝を伝えているか
+  - 不満を伝えているか
+  - 共通認識がどれだけあるか
 
 ## メモ
 
@@ -85,3 +119,5 @@
 仲間
 
 付き合う際に気をつけること。こだわりや欠点でもあるかも。
+
+人との共通点は安心を生み、相違点は刺激を生む。
