--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -158,3 +158,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 しばらく連絡してなくて、用事がないと連絡しにくいと思ったら社交が足りてない。
 仕事なら何かしら用事があるから連絡しやすいけど、プライベートだと疎遠になりやすい。
+
+「蛙化」というのは、単純に社交をサボっているだけ。普通は感謝や不満を伝えることで嫌なところも擦り合わせていくもの。直してくれたり、それに合わせて自分もある程度妥協したりすることで、関係を長く続けられる。 最近の若い子が単純に底が浅くて人間関係を続けられないだけ。
