--- a/shared/business/tips/狩猟と農耕の違い.md
+++ b/shared/business/tips/狩猟と農耕の違い.md
@@ -22,3 +22,10 @@
 人口が多くなると農耕でしか支えられない。
 
 農業には貯蔵が必要。畑を整備して維持しないといけないし、種も用意しないといけない。それができるまでは狩猟採集で凌ぐ必要がある。
+
+狩猟型の習慣と農耕型の習慣がある。
+積極的に獲物を狙って狩りに動くのは狩猟型、積極的に種をまいて実りを待つのは農耕型。
+また、どっちもしないと落ちているものを食べるだけの採集型になる。
+
+農耕に比べると狩猟の方が手間は少ないけど、成果が安定しなかったり、和を乱しやすかったりする欠点がある。
+社会で和を乱すと追い出されて狩場を失う。
