--- a/shared/decision/機会を逃さない.md
+++ b/shared/decision/機会を逃さない.md
@@ -1,2 +1,5 @@
 どうしても決めないといけないタイミングで必要な情報が全て揃っていることはまずない。
 できるだけ情報を集める努力はしても、情報が足りないのを判断しない言い訳に使ってはいけない。
+
+機会が少ないことはそれを理解して、少ない機会を掴めるように準備しないといけない。
+あるいは、機会を増やせるなら増やすのも成功に繋がりやすい。
