--- a/shared/execution/実行.md
+++ b/shared/execution/実行.md
@@ -54,3 +54,8 @@ action も execution の派生と考えられる。
 テストやトライアルアンドエラーは実行の下でもいい。
 
 executionは実行というよりも処理に近い。実行することよりも、完了することが重要。
+
+実行には結果が伴う。
+結果が得られない場合はエラーや例外。終わらない、という例外もある。
+
+原則や例外も実行の文脈なのかも。
