--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -129,3 +129,7 @@
 結婚しない人はそんなに稼がなくてもいいので、働かなくなる可能性も高い。
 
 家、というか遺伝子を守ることだけ考えたら、女性はパートナーというよりも庇護の対象。子どもを作って、相手に何も求めずにただ守る。
+
+結局、一人暮らしで慎ましく生活しているとそこまで支出がない。
+結婚でもしない限り、あくせく働く必要はないのかも。
+就職が結婚に必ずつながるわけでもない。
