--- a/shared/human/being/well/精神的余裕.md
+++ b/shared/human/being/well/精神的余裕.md
@@ -24,3 +24,8 @@
 危険や不安がなくて、それ以外のところに注意を払えること。他人に親切にするのも同様。
 
 延期できるなら延期することで時間的余裕は得られるけど、機会を失うことが多いのであまり選べない。
+
+自由な時間があって、取り止めもなく思索に耽ったり、ぶらぶらと近所を散歩したりするだけでも豊かな生活だ。
+
+時間があることは贅沢である。
+無駄に時間を潰してはならない。
