--- a/shared/human/being/well/経済的安定.md
+++ b/shared/human/being/well/経済的安定.md
@@ -27,3 +27,6 @@
 そもそも生きるためだけに週5も働くのはコスパが悪い。
 
 開発の会社で安定収入のために保守契約を結ぶことがあるけど、安定収入のために時間を使いすぎるのは、儲けのわりに人件費がかかりすぎたり、社員のエンゲージメントが下がったりすることが多い。
+
+経済的安定がなくても、貯蓄があると経済的余裕につながりやすい。
+一時的に大きく稼いで貯めておくでも別にいい。
