--- a/shared/human/body/muscle/training/筋トレの頻度.md
+++ b/shared/human/body/muscle/training/筋トレの頻度.md
@@ -1,3 +1,6 @@
 筋肉痛にならないくらいの負荷なら運動や筋トレは休みの日を設けなくていい。
 
-筋肉痛の時はその部位の筋トレを避ける。
+動かしてみて痛いときはその部位の筋トレを避ける。回復に専念する。
+
+上半身と下半身、体幹とそれ以外、みたいに部位ごとに日を分ける方法もある。
+まとまった時間が定期的に取れないなら部位ごとに分けたほうが1日分のトレーニングは短時間で済むし、毎日やるので習慣にしやすい。
