--- a/shared/sex/dating/tips/セックスに誘う.md
+++ b/shared/sex/dating/tips/セックスに誘う.md
@@ -11,3 +11,15 @@
 より親密なスキンシップを進めていくことで言外にセックスに誘う。
 
 言葉でセックスに誘うのはいやらしい。
+
+セックスに限らず、人を誘うのは相手もそうしたいと思っているタイミングが一番いい。
+
+セックスしたいと感じやすいタイミング:
+
+- 愛されていると感じた
+- 大切にされていると感じた
+- 男性の健康的な良さを感じた
+- 断っても嫌な顔をしない
+- 女性が大切にされている映画などを見た
+- 男性も喜んでいることが伝わった
+- 精神的に疲れた
