--- a/shared/sex/恋.md
+++ b/shared/sex/恋.md
@@ -76,3 +76,6 @@ romance に集約してもいいかも。
 相手が友人だと思っていても、関係を進めたいなら恋愛感情を示すしかないか。
 
 女性への興味を隠すとよくない。
+
+狩りに出ないなら、気遣いなどの種をまいてモテるようにならないといけない。
+モテないなら狩りに出ないといけない。
