--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -126,3 +126,12 @@ loveもworkも利害関係は別で、careにあるのかも。
 時間や手間は有限なので、何かを大事にするということは、それ以外を見捨てることでもある。捨てるものが少ないと、それだけ一つ一つの大事なものにかけられる手間は少なくなってしまう。
 
 情というのは本当に大事なものを守ることであって、それ以外のどうでもいいものにまで情を振り撒いて最も大事なものを失ったのでは本末転倒だ。
+
+人以外にも、何かを大切にする、面倒を見る、ということで情を考える。
+
+情というのは相手を特別扱いするもの。
+
+人は、特別な存在だと思われたい。
+
+誰かに大切にしてもらえなくても、自分だけは自分を大切にしなければならない。
+情の基礎は自分を大切にすること。
