--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -45,3 +45,10 @@
 
 気遣いは、愛や情ではない。
 単純に、ムードが悪いと不快だから自分でなんとかするだけ。掃除みたいなもの。
+
+タイミングの原則:
+
+- やらないよりはやった方がいい
+- 遅いよりは早い方がいい
+
+こちらを気にかけてくれている人に、自分から報告する。
