--- a/shared/training/練習の順序.md
+++ b/shared/training/練習の順序.md
@@ -46,3 +46,7 @@
 時間をかけるならもっと根本的なフィジカルや基礎技術に時間をかける。
 
 練習が足りないうちはとにかく全部意識してやらないといけないのが難しい。ひとつずつ無意識に落とし込んでいくのが大事。
+
+技術習得には順序がある。
+必要な条件を満たしてないのに一段飛ばしで進もうとすると、変な癖がついて下手になったり、怪我をしたりする。
+負荷の場合も、自分が耐えられない負荷をかけても意味がない。少しずつ負荷を上げて慣らす。
