--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -14,8 +14,11 @@
 ## 喉を広げる前提条件
 
 - 息が強い
+- 声帯に力が入らず閉じている
 
 息が弱いまま喉を開いても声にならない。まずは息を強くするのが先。むしろ息が弱いから喉が締まる。
+
+喉を開く前に、声帯を閉じないといけない。声帯をしっかり合わせつつ、力は入れない。
 
 ## 喉を開く注意点
 
