--- a/shared/voice/training/tips/声帯を鳴らす.md
+++ b/shared/voice/training/tips/声帯を鳴らす.md
@@ -1,3 +1,10 @@
+声帯が完全に閉じていると声は出ない。ほんの少し開いている。
+
+- 息の圧をかけながら、声帯を閉じる
+- 声帯を閉じて息の圧をかけたところから、声帯を開く
+
+どちらの方法もできた方がいい。
+
 声帯を鳴らすのに必要なのは呼気の圧であって量ではない。
 
 声帯をよく鳴らすには、声帯（に沿っている筋肉）の力を抜いて、代わりに首の筋肉でよく張らないといけない。
@@ -18,3 +25,5 @@
 息が強くなるほど、声帯は柔らかく使える。
 
 呼吸を鍛えたら、声帯は緩めていく。そのままだと声が強く重くなりすぎる。
+
+声帯に力が入って硬くなると、効率的に振動させられない。
