--- a/shared/communication/media/language/言葉にする.md
+++ b/shared/communication/media/language/言葉にする.md
@@ -56,3 +56,13 @@ https://youtu.be/8FHo4BKf8hk?si=H7tmy8LWTURy3Ger
 過去よりも、現在目の前にあるものを見ながら語る方が簡単。
 まずは現在のことを語れないと、過去のことは語れない。
 例えばアニメを語りたいなら、アニメを見ながら語る練習をする。
+
+言葉にするなら相手に理解できないといけない。相手によっても適切な言葉は違う。
+
+抽象的な言葉よりもまずは具体的な言葉をたくさん覚えた方が伝えやすい。
+
+言葉にするのが苦手な人の特徴:
+
+- 自分の考えがそもそもない
+- 語彙が少ない
+- 考えが否定されるのを恐れている
