--- a/shared/execution/prompt/指示.md
+++ b/shared/execution/prompt/指示.md
@@ -76,3 +76,5 @@ https://www.nikkei.com/article/DGXZQOUD198KF0Z11C24A2000000/?n_cid=SNSTW005
 
 人間に指示する場合でも、一つの実行環境として考える。
 人によって違うのがコンピュータよりも面倒。でもコンピュータよりは雑な命令でも伝わる。
+
+考え方を具体的に指示することでより精度の高い作業ができる。
