--- a/shared/thinking/思考の限界.md
+++ b/shared/thinking/思考の限界.md
@@ -6,10 +6,16 @@
 ただ、全てを予見することはまずできない。
 できるだけコストをかけずに、できるだけ予見する。バランスが大事。
 
+思考は遅いので、できれば問題に直面する前から考えておくといい。
+ただ、全てを予見することはまずできない。
+できるだけコストをかけずに、できるだけ予見する。バランスが大事。
+
 ## 思考は行動を遅らせる
 
 思考は行動の邪魔になる。
 最終的には、無意識に、意味を考えずにできるようにする。何を無意識にするべきかを思考する。
+
+戦っている間は考えるよりも速く動くことを重視する。考えないわけではないが、考えることで止まってしまうのが一番危ない。
 
 ## 思考は検証されていない
 
@@ -24,8 +30,6 @@
 思考は、良い仮説を立てるためのもの。
 いくつかの仮説を出して、良いものを選ぶ。
 
-## その他
+## 一人では盲点がある
 
 他人がいると盲点が減る。
-
-戦っている間は考えるよりも速く動くことを重視する。考えないわけではないが、考えることで止まってしまうのが一番危ない。
