--- a/shared/discussion/議論に勝つ.md
+++ b/shared/discussion/議論に勝つ.md
@@ -4,3 +4,6 @@
 議論に勝つには、論破するのではなく、質問攻めにして相手の自信を挫かないといけない。
 
 相手が黙っても議論に勝ったとは言えない。ただ呆れられているだけ。
+
+「論破されるのはそれなりの知性を持っている人だけです。知性が欠如している人を論破することは原理的に不可能です。」
+https://x.com/kamo_hiroyasu/status/2008812520849748013?s=12
