--- a/shared/entertainment/examples/ギャンブル.md
+++ b/shared/entertainment/examples/ギャンブル.md
@@ -32,3 +32,6 @@
 お金を集めて、ほんの少しだけ手数料を抜いて、あとは勝った人で山分けしてもらう。
 
 ギャンブルに使えるお金はキャッシュフローで決まる。十分な収入の余裕があればそこまでは使ってもいい。生活費や資産には手をつけない。
+
+宝くじはギャンブルというより寄付。基本的に当たらない。
+宝くじは10枚連番で1枚、100枚連番で11枚、1000枚連番で111枚無料になる。
