--- a/shared/management/performance/怠慢.md
+++ b/shared/management/performance/怠慢.md
@@ -27,3 +27,7 @@
 上司が怠ければ部下も怠ける。
 
 組織のトップは誰よりも働かないといけない。
+
+パフォーマンスが落ちてないのに休みたがるのはただの怠惰。
+まぁ、生物というのは怠惰なものなので、むしろパフォーマンスを高めようとする生き方が狂っている。
+人間には社会性がないので、パフォーマンスが低い個体が死にやすい。
