--- a/shared/mood/気分.md
+++ b/shared/mood/気分.md
@@ -1,3 +1,5 @@
+# Mood
+
 良い気分とは、行動につながる精神状態。
 
 - 信頼できる
@@ -9,3 +11,14 @@
 - 邪魔されない
 - 気後れしない
 - 気を使わない
+
+気分が落ち込んでいると、行動が減る。活性が低くなる。
+
+ムードがいいと動きが活発になる。元気になる。
+
+moodは結果で、やることとしては相手を大切にするのがベースか。
+
+空気というよりも、気分として考えた方がいいかも。
+複数人じゃなくて、自分にも適用できる。
+
+気分が良いということは、活性が高いことにつながる。行動が増える。
