--- a/shared/business/examples/不動産売買.md
+++ b/shared/business/examples/不動産売買.md
@@ -3,3 +3,6 @@
 不動産屋を介さない不動産取引もある。
 所有者本人やその友人と知り合いなら、直接テナントを借りたりすることもできる。
 人脈を広げることでより条件の良い取引ができる可能性がある。
+
+「美人にアパートを貸すな」（不動産屋の格言）
+もし水商売だとトラブルになりやすいという意味だと思われる。
