--- a/shared/discussion/結論から伝える.md
+++ b/shared/discussion/結論から伝える.md
@@ -1,2 +1,6 @@
 「結論から伝える」というのは、「自分の意見をまとめてから言う」ことではなく、「まず相手の疑問に答える」こと。
 自分の言いたいことだけ喋るのを「結論から伝える」とは言わない。
+
+結論から話すには、相手が聞きたいことを把握しないといけない。
+
+結論とは、「自分が話したいこと」ではなく、「相手が聞きたいこと」だ。
