--- a/shared/health/exercise/tips/腹回りを鍛える.md
+++ b/shared/health/exercise/tips/腹回りを鍛える.md
@@ -1,3 +1,13 @@
 腹筋は大きく分けて、上部、下部、側部があるので、バランスよく鍛えるといい。
 
+## 側部
+
+腰を左右に捻る動きが効く。
+
+## 下部
+
+主に体幹を鍛える。
+
 腹筋の下部を鍛えたいなら、足や骨盤を動かす運動が向いている。
+
+膝をついて背中を丸めるプランクは特に下腹に効く。
