--- a/shared/human/being/well/幸せを感じる.md
+++ b/shared/human/being/well/幸せを感じる.md
@@ -21,6 +21,10 @@
 
 簡単な方法で幸せを実感できないと、ギャンブルとか不健全な方法で実感しないと幸せを感じられなくなる。
 
+- ドーパミン: 快楽
+- セロトニン: 快適
+- オキシトシン: 親愛
+
 セロトニンが出やすい活動:
 
 - リズム運動
@@ -31,3 +35,5 @@
 セロトニンは集中するためのホルモン。注意散漫だとよくない。
 
 幸せになるということは、単に何かをよくしていくということ。
+
+ドーパミンは満たされたら終わりだけど、オキシトシンは満たされるからこそ続く。快楽と幸福の違い。
