--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -27,3 +27,10 @@
 好きな人は多いほうがいい。その中で連絡に割けるリソースも限界があるので、一部に絞ることはある。でも好きになっておいて損はない。人嫌いは損。
 
 人を好きになるために、その人のエピソードを思い出してみたり、知らないエピソードを想像してみたり。
+
+健康に対する好感:
+
+- 肌つやがいい
+- 筋肉がついている
+- 脂肪が適度についている
+- よく笑っている
