--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -52,3 +52,14 @@
 - 遅いよりは早い方がいい
 
 こちらを気にかけてくれている人に、自分から報告する。
+
+相手が欲しがっているもの
+
+相手の考えていることはわからないので、表面的な反応にフォーカスして良い反応を得られる刺激を探すのが大事。
+
+- 言わなくてはならないこと
+- 言わなくていいこと
+- 言ってはならないこと
+
+余命を伝えたり、別れを切り出したりするとき、どうしても相手が受けるダメージを小さく抑える。
+そうするとどうなる？でもどうせ別れる人に気を使う必要ってあるのか？でも恨みを持つと別れてくれないかもしれない。付きまとわれるのを避けるために、ダメージを抑える。
