--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -37,3 +37,15 @@
 
 品が良いと、品が悪い人を自然と排除することがある。
 高級店に安い格好で入りにくいのと同じ。
+
+品がない行為
+
+- 人を試す
+- 高圧的
+- 悪口を言う
+- 噂話ばかりする
+- 感情的
+- 自分語りばかりする
+- 笑い方や言葉遣いが粗野
+
+ただ、全体的には、接していて気分が悪くなる人、というのがわかりやすいか。時代や文化によっても違う。
