--- a/shared/human/body/nerve/神経を鍛える.md
+++ b/shared/human/body/nerve/神経を鍛える.md
@@ -1,3 +1,5 @@
+## 一つのボールを使った遊び
+
 https://x.com/kintsuzuike/status/2008508851138548016?s=61
 
 - 片手でボールを投げ上げて、同じ手で下から掴む
@@ -6,3 +8,11 @@ https://x.com/kintsuzuike/status/2008508851138548016?s=61
 - 片手でボールを投げ上げて、同じ手で下を潜って上から掴む
 - 片手でボールを壁に当てて、同じ手で掴む
 - もう片方の手で別の作業をしながら行う（バスケのドリブルなど）
+
+## 二つのボールを使った遊び
+
+https://x.com/ninnikinene/status/2009052394227945846?s=12
+
+- 両手に二つのボールを持って前に腕を伸ばし、両手を離して交差させて上から掴む、戻して上から掴む
+- 腕を胸の前で交差させて、上の腕でボールを投げ上げて、下に回してボールを掴む
+- 片手で二つのボールをお手玉する
