--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -62,3 +62,5 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 音楽の核は、レガートや進行感と呼ばれるもの。何かが続いていく、進んでいく感じ。
 
 音楽の習得はハーモニー、リズム、メロディ、の順。
+
+音楽的には、一音でも成立する和音、ハーモニーがまずあって、次にレガートを構成する一部としてリズムがある。まずはこの二つが重要で、メロディーはそこまで重要ではない。でも伴奏と合わせる場合は伴奏のメロディーとハーモニーを構成するので、メロディーは綺麗にたどれた方がいい。
