--- a/shared/intimacy/愛想.md
+++ b/shared/intimacy/愛想.md
@@ -1,5 +1,8 @@
 親しみのある態度。
 
 人に対してそっけなく、機嫌が悪く見えるような振る舞いは愛想が悪い。
+せめて笑顔を見せる。
 
 愛嬌よりは、機嫌の面が強い。愛嬌は単純に可愛らしい感じの振る舞い。あるいは可愛い感じの魅力的な振る舞い。
+
+自分や相手に壁があると親しくなるのは難しい。相当ぐいぐい来る人に好かれないと。
