--- a/shared/singing/歌の基本.md
+++ b/shared/singing/歌の基本.md
@@ -35,3 +35,5 @@ https://youtu.be/Q-nW_cP21Kg?si=oNWOOijeEqIjtweV
 ただ、技術的には基礎練習ばかりだと飽きやすいので楽しめるように工夫しないといけない。
 
 歌うだけで精一杯だと、「聴かせよう」とする段階になっていない。まずは曲を覚えて、あまり意識を向けなくても歌えるようにする。意識は表現やその場の空気に向ける。
+
+横隔膜を下げて息を支えて、腹筋だけで息の強さを制御して、声帯の伸縮だけでピッチをコントロールすれば、声はレガートになる。
