--- a/shared/collaboration/organization/hierarchy/上司の仕事.md
+++ b/shared/collaboration/organization/hierarchy/上司の仕事.md
@@ -96,3 +96,5 @@
 上司に必要なのは部下のエンゲージメントを高めること。それだけ。ただ、部下によってはエンゲージメントのために知性や教養、技術、実績などを求めることはある。
 
 上司が部下の気力を損なってはいけない。
+
+問題解決は基本的に上司の仕事。部下の仕事はその一部の作業。
