--- a/shared/mood/態度.md
+++ b/shared/mood/態度.md
@@ -27,3 +27,5 @@
 品性も態度かも。
 
 そもそもどういう態度が良いものかわかってないと、気分が良くても態度が良くならない。むしろその振る舞いが良いと思ってうまくいかないこともある。教育が必要。「こうしてほしい」と具体的に伝えて反復させる。
+
+酔っ払うと態度が悪くなりやすいので、人前で過度に酔うべきではない。酒は飲んでも飲まれるな。
