--- a/shared/mood/気分.md
+++ b/shared/mood/気分.md
@@ -2,6 +2,18 @@
 
 良い気分とは、行動につながる精神状態。
 
+## 良い気分
+
+- 積極的
+- 能動的
+- 前向き
+- 動き出したい
+- ワクワクする
+- 楽しみ
+- 気軽、気楽にできる
+
+## さらに具体的に
+
 - 信頼できる
 - 安心できる
 - リラックスできる
@@ -11,6 +23,9 @@
 - 邪魔されない
 - 気後れしない
 - 気を使わない
+- 前向きになる
+
+## その他
 
 気分が落ち込んでいると、行動が減る。活性が低くなる。
 
