--- a/shared/popular/好感度.md
+++ b/shared/popular/好感度.md
@@ -27,3 +27,6 @@ favor には「特別扱いする、贔屓する」意味がある。
 
 大事なのはタイミング。
 相手を良く見る。
+
+好感のベースは健康なのかな？余裕があって、エネルギッシュで、明るくて、美しくて、顔色が良くて、強そうなのは良いことだ。
+逆にステータスは財産や福祉の面。自分が生きていくためにも利用できるかどうか。
