--- a/shared/society/greeting/挨拶の例.md
+++ b/shared/society/greeting/挨拶の例.md
@@ -32,6 +32,12 @@
 - 「お変わりないですか？」
 - 「最近、どうですか？」
 
+## タイミングを合わせる
+
+- 乾杯
+- 「いただきます」
+- 「ごちそうさまでした」
+
 ## 年始
 
 - 「明けましておめでとうございます」
@@ -47,13 +53,21 @@
 - 「良いお年を」
 - お歳暮
 
-## その他
+## お祝い
 
+- 「おめでとう」
 - 「ありがとう」
 - 「どういたしまして」
-- 「ごめんなさい」
-- 「いただきます」
-- 「ごちそうさまでした」
 - 結婚祝い
 - 出産祝い
+
+## お悔やみ
+
+- 「ごめんなさい」
+- 「ご愁傷様です」
+- 「お悔やみ申し上げます」
+- 「恐れ入ります」
+
+## その他
+
 - お土産
