--- a/shared/voice/training/exercises/ハミング.md
+++ b/shared/voice/training/exercises/ハミング.md
@@ -48,3 +48,10 @@
 
 ハミングは鼻に息を通すので、鼻腔共鳴とは違う。
 鼻腔共鳴は鼻に息を通さない。音だけが鼻を通る。
+
+口を閉じてハミングをしながら、口を開けるオープンハミングもある。
+
+ハミングの派生:
+
+- 口を開けたままハミングする (オープンハミング)
+- 頬を膨らませてハミングする (パフィーチーク)
