--- a/shared/voice/training/exercises/リップロール.md
+++ b/shared/voice/training/exercises/リップロール.md
@@ -96,3 +96,6 @@ https://youtu.be/CJQRga_MxjQ?si=alWDmYbCHVLSAlef
 リップロールは呼気圧を安定させるのがコツ。
 
 リップロールは息で揺らしているので、息を漏らさないとうまく鳴らない。
+
+有声音のリップロールと無声音のリップロールがある。
+また、有声音の中でも重いのと軽いのがある。
