--- a/shared/math/changes/statistics/descriptive/平均.md
+++ b/shared/math/changes/statistics/descriptive/平均.md
@@ -24,3 +24,6 @@ https://bellcurve.jp/statistics/course/4324.html
 平均はあまり役に立たない。分散が少ない時だけ。
 
 平均は、分散と一緒に見ないと傾向がわからない。
+
+福井県知事がLINEで1000通のセクハラメッセージを送っていたというニュースがあった。
+平均だけ見ると、全国47人の都道府県知事は平均21.3通のセクハラメッセージを送っていることになる。分散は約2万、標準偏差は144になる。
