--- a/shared/voice/training/exercises/ハミング.md
+++ b/shared/voice/training/exercises/ハミング.md
@@ -8,6 +8,14 @@
 基本は相槌の感覚。口を閉じて「うんうん」の感覚。
 まずは出しやすい高さから始める。
 
+腹から息を吐いて、胸や喉でコントロールしないこと。
+
+## ハミングの種類
+
+- 口を閉めてハミングする
+- 口を開けてハミングする (オープンハミング)
+- 頬を膨らませてハミングする (パフィーチーク)
+
 ## その他
 
 ハミングは鼻歌と違って声帯で音を鳴らして鼻に通す。
@@ -50,8 +58,3 @@
 鼻腔共鳴は鼻に息を通さない。音だけが鼻を通る。
 
 口を閉じてハミングをしながら、口を開けるオープンハミングもある。
-
-ハミングの派生:
-
-- 口を開けたままハミングする (オープンハミング)
-- 頬を膨らませてハミングする (パフィーチーク)
